# Higgins

./: .gitignore  COPYING  INSTALL  MANIFEST.in  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  configure.ac  setup.cfg  setup.py
data/templates/: Makefile.am  browser-album.t  browser-byartist.t  browser-bygenre.t  browser-bytag.t  browser-genre.t  browser-index.t  front.t
higgins/: Makefile.am  __init__.py  album.py  artist.py  conf.py  content.py  core.py  db.py  entrypoint.py  loader.py  logger.py  logging.py  playlist.py  rest.py  server.py  service.py  settings.py  signals.py  site_settings.py  site_settings.py.in  song.py  uploader.py
higgins/core/: Makefile.am  __init__.py  browser.py  config.py  configurator.py  content.py  content_resource.py  dashboard.py  dispatcher.py  error.py  front.py  frontend.py  library.py  logger.py  manage.py  manager.py  models.py  postable_resource.py  restapi.py  search.py  service.py  settings.py  static.py  upload.py  urls.py
higgins/core/rest/: __init__.py  album.py  artist.py  playlist.py  resource.py  song.py
higgins/core/upgradedb/: __init__.py  logger.py  to_1.py
higgins/data/: __init__.py
higgins/data/templates/: base.html  base.t  browser-album.t  browser-artist.t  browser-byartist.t  browser-bygenre.t  browser-bytag.t  browser-genre.t  browser-index.t  browser-song.t  error.html  front.html  front.t  library-base.t  library-front.html  library-front.t  library-music.html  library-music.t  music-album.html  music-album.t  music-artist.html  music-artist.t  music-byartist.html  music-byartist.t  music-bygenre.t  music-bytag.t  music-genre.t  music-song.html  music-song.t  playlist-byname.t  playlist-front.html  playlist-songs.html  playlist-songs.t  settings-base.t  settings-configure.html  settings-front.html  settings-front.t  settings-plugin.t  settings-plugins.html  settings-plugins.t  (+2 more)
higgins/gst/: __init__.py  logger.py  metadata.py  reactor.py  transcode.py
higgins/http/: __init__.py  base_resource.py  compat.py  dirlist.py  error.py  fileupload.py  http.py  http_headers.py  iweb.py  log.py  logger.py  page_resource.py  plugin.py  postable_resource.py  proxy.py  resource.py  responsecode.py  routes.py  server.py  static.py  stream.py  tap.py  twcgi.py  twscgi.py  url_dispatcher.py  vhost.py  wsgi.py  xmlrpc.py
higgins/http/auth/: basic.py  digest.py  interfaces.py  wrapper.py
higgins/http/channel/: __init__.py  cgi.py  fastcgi.py  http.py  scgi.py
higgins/http/client/: http.py
higgins/http/dav/: acl.py  davxml.py  fileop.py  http.py  idav.py  noneprops.py  resource.py  static.py  util.py  xattrprops.py
higgins/http/filter/: __init__.py  gzip.py  location.py  range.py
higgins/http/test/: __init__.py  test_cgi.py  test_client.py  test_compat.py  test_fastcgi.py  test_fileupload.py  test_http.py  test_http_headers.py  test_httpauth.py  test_log.py  test_plugin.py  test_scgi.py  test_server.py  test_static.py  test_stream.py  test_vhost.py  test_wsgi.py  test_xmlrpc.py
higgins/netif/: __init__.py  commands.pyx  netif-internal.c  netif-internal.h
higgins/platform/: inotify-internal.c  inotify-internal.h  inotify.pyx  netif-internal.c  netif-internal.h  netif.pyx
higgins/plugins/: __init__.py
higgins/plugins/daap/: __init__.py  codebag.py  commands.py  content_codes.py  logger.py
higgins/plugins/mediaserver/: __init__.py  av_transport.py  connection_manager.py  content_directory.py  logger.py
higgins/plugins/mrss/: feeds.py  (+1 more)
higgins/upnp/: __init__.py  action.py  control_resource.py  device.py  device_service.py  event_resource.py  logger.py  prettyprint.py  service.py  ssdp_server.py  statevar.py  upnp_server.py
plugins/daap/: Makefile.am  setup.py
plugins/upnp/: Makefile.am  setup.py
scripts/: Makefile.am  higgins-media-server.in  higgins-upload
(+90 files in other folders)
