templatesdir = $(datadir)/higgins/templates
templates_DATA = \
	base.t \
	browser-album.t \
	browser-artist.t \
	browser-byartist.t \
	browser-bygenre.t \
	browser-bytag.t \
	browser-genre.t \
	browser-index.t \
	browser-song.t \
	front.t \
	settings-front.t \
	settings-services.t \
	settings-service.t

EXTRA_DIST = $(templates_DATA)
